--- a/views/index.pug
+++ b/views/index.pug
@@ -6,11 +6,11 @@ block content
       .row
         .col-md-10.col-lg-10.col-md-offset-1.col-lg-offset-1.text-center
           h2.title United Effects Platform
-          h3.subtitle Freedom Postcards Payment Service
+          h3.subtitle Freedom Postcards Civic API Proxy Service
           h4.tagline
-            | A server side implementation of the Stripe.com API for use with freedompostcards.com.
+            | A proxy service to ensure https on googleapi civic service content.
             br
-            |                    In the future, additional payment options may be integrated.
+            |                    https://www.googleapis.com/civicinfo/v2.
           p
           .row
             .col-md-4
